# miscellaneous

./: .gitignore  CMakeLists.txt
Ansible/: inventory.yaml
Ansible/playbooks/: pkg-install.yaml
Ansible/playbooks/entertainment/playbooks/: main.yaml
Ansible/roles/sys-setup/bash/tasks/: main.yaml
Ansible/roles/sys-setup/basics/tasks/: main.yaml
Ansible/roles/sys-setup/gnome/tasks/: main.yaml
C/Linked-List-Single/: list-single-runner.c  list_single.c  list_single.h
C/Searching/: binary-search-runner.c  binary-search.c  binary-search.h
C/Sorting/: bubble_sort.c  bubble_sort.h  bubble_sort_driver.c
C/Utils/: utils.c  utils.h
